# corol

./: .gitignore  requirements.txt  test.urls
corol_server/: Cargo.toml
corol_server/src/lib/: mod.rs
corol_server/src/lib/models/: mod.rs
migrations/: 20220909124646_page.sql
scrapper/: db.py  main_test.py
scrapper/api/: models.py  router.py
scrapper/index/: main.py
