[package]
name = "corol-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.1", features = ["serde", "v4", "v8"] }

[lib]
name = "corol_api"
path = "src/lib/mod.rs"
